fix: open CORS to all origins and all paths